--- a/data/meta_tags.yml
+++ b/data/meta_tags.yml
@@ -1,6 +1,6 @@
 # IMPORTANT: at the bottom of your config.rb, make sure you update your domain
 og:
-  project_name: "MY NAME - Web Developer"
-  title: "MY NAME - Web Developer"
+  project_name: "Ryan Joseph Johnson - Full-Stack Web Developer"
+  title: "Ryan Joseph Johnson - Full-Stack Web Developer"
   description: "A portfolio of my web apps."
   # image: "og_image.png"
